updated port and imports with productions urls

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -34,7 +34,11 @@
       "imports": {
         "single-spa": "https://cdn.jsdelivr.net/npm/single-spa@5.9.0/lib/system/single-spa.min.js",
         "react": "https://cdn.jsdelivr.net/npm/react@16.13.1/umd/react.production.min.js",
-        "react-dom": "https://cdn.jsdelivr.net/npm/react-dom@16.13.1/umd/react-dom.production.min.js"
+        "react-dom": "https://cdn.jsdelivr.net/npm/react-dom@16.13.1/umd/react-dom.production.min.js",
+        "@lernit/root-config": "https://spa-demo-root-config.vercel.app/lernit-root-config.js",
+        "@lernit/spa-demo-home": "https://spa-demo-home.vercel.app/lernit-spa-demo-home.js",
+        "@lernit/spa-demo-about": "https://spa-demo-about.vercel.app/lernit-spa-demo-about.js",
+        "@lernit/spa-demo-header": "https://spa-demo-header.vercel.app/lernit-spa-demo-header.js"
       }
     }
   </script>
